[package]
name = "binary_butler"
version = "0.1.0"
authors = ["EmilLuta <virgil.luta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
shellexpand = "2.0.0"
walkdir = "2"
is_executable = "0.1.2"
content_inspector = "0.2.4"
log = "0.4.14"
simple_logger = "1.11.0"

[dev-dependencies]
criterion = "0.3"
